--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello JS !</h1>
+    <h1>Hello JS :) !!</h1>
 </body>
 
 <script src="script.js"></script>
